// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compliance Page should render Approval Table when MATM is enabled 1`] = `
<Page
  py="xl"
  title="Compliance – Polymath"
>
  <Connect(Progress) />
  <Grid
    gridGap={4}
  >
    <GridRow
      gridGap="0px"
    >
      <GridCol
        gridSpan={9}
      >
        <h1
          className="pui-h1"
        >
          Token Compliance
        </h1>
        <h3
          className="pui-h3"
        >
          Manage compliance requirements of your tokens. You can import and export your whitelist, manage ownership percentages, add 3rd party whitelist managers, and manage approval of token transfers between wallets.
        </h3>
      </GridCol>
      <GridCol
        style={
          Object {
            "alignSelf": "center",
          }
        }
      >
        <Button
          className="import-whitelist-btn"
          disabled={false}
          icon="upload"
          iconDescription="Provide icon description if icon is used"
          kind="primary"
          onClick={[Function]}
          small={false}
          tabIndex={0}
          type="button"
        >
          Import Whitelist
        </Button>
      </GridCol>
      <GridCol
        style={
          Object {
            "alignSelf": "center",
          }
        }
      >
        <Connect(ImportWhitelistModal)
          isOpen={false}
          onClose={[Function]}
          onSubmit={[Function]}
        />
        <Button
          className="import-whitelist-btn"
          disabled={false}
          icon="download"
          iconDescription="Provide icon description if icon is used"
          kind="secondary"
          onClick={[Function]}
          small={false}
          tabIndex={0}
          type="button"
        >
          Export Whitelist
        </Button>
      </GridCol>
      <GridCol
        style={
          Object {
            "alignSelf": "center",
            "justifySelf": "left",
          }
        }
      >
        <OverflowMenu
          ariaLabel="list of options"
          direction="bottom"
          flipped={true}
          floatingMenu={true}
          iconDescription="open and close list of options"
          menuOffset={[Function]}
          menuOffsetFlip={[Function]}
          onClick={[Function]}
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          open={false}
          style={
            Object {
              "float": "right",
            }
          }
          tabIndex={0}
        >
          <OverflowMenuItem
            disabled={false}
            hasDivider={false}
            isDelete={false}
            itemText="Pause All Transfers"
            onClick={[Function]}
          />
        </OverflowMenu>
      </GridCol>
    </GridRow>
    <GridRow
      gridGap={4}
    >
      <GridCol
        gridSpan={
          Array [
            12,
            12,
            6,
            6,
          ]
        }
      >
        <div
          id="compliance"
        >
          <br />
          <div
            className="pui-page-box compliance-form"
          >
            <h1
              className="pui-h1"
            >
              Ownership Restrictions
            </h1>
            <div
              className="compliance-settings"
            >
              <div
                className="bx--form-item"
              >
                <label
                  className="bx--label"
                  htmlFor="percentageToggle"
                >
                  Enable Ownership Restrictions
                </label>
                <Toggle
                  defaultToggled={false}
                  id="percentageToggle"
                  labelA="Off"
                  labelB="On"
                  onToggle={[Function]}
                  toggled={false}
                />
              </div>
              <div
                className="bx--form-item"
                style={Object {}}
              >
                <label
                  className="bx--label"
                  htmlFor="percentage"
                >
                  Each Individual Investor Can
                  <br />
                  Own Up To of Outstanding Tokens
                </label>
                <div>
                  <TextInput
                    className="bx--text__input"
                    disabled={false}
                    helperText=""
                    id="percentage"
                    invalid={false}
                    invalidText=""
                    labelText=""
                    light={false}
                    onChange={[Function]}
                    onClick={[Function]}
                    placeholder="–"
                    type="text"
                  />
                  <Button
                    className="apply-percentage-btn"
                    disabled={true}
                    iconDescription="Provide icon description if icon is used"
                    kind="primary"
                    onClick={[Function]}
                    small={false}
                    tabIndex={0}
                    type="button"
                  >
                    Apply
                  </Button>
                </div>
              </div>
            </div>
            <div
              className="pui-clearfix"
            />
          </div>
        </div>
      </GridCol>
      <GridCol
        gridSpan={
          Array [
            12,
            12,
            6,
            6,
          ]
        }
      >
        <div
          id="compliance"
        >
          <br />
          <div
            className="pui-page-box compliance-form"
          >
            <h1
              className="pui-h1"
            >
              Whitelist Management
            </h1>
            <div
              className="whitelist-settings"
            >
              <div
                className="bx--form-item"
              >
                <label
                  className="bx--label"
                  htmlFor="whitelistToggle"
                >
                  Enable Third-Party Whitelist Management
                </label>
                <Toggle
                  defaultToggled={false}
                  id="whitelistToggle"
                  labelA="Off"
                  labelB="On"
                  onToggle={[Function]}
                />
              </div>
              <div
                className="bx--form-item"
                style={
                  Object {
                    "display": "none",
                  }
                }
              >
                <Connect(WhitelistTable) />
              </div>
            </div>
            <div
              className="pui-clearfix"
            />
          </div>
        </div>
      </GridCol>
    </GridRow>
    <GridRow
      gridGap={4}
    >
      <GridCol
        gridSpan={
          Array [
            12,
            12,
            12,
            12,
          ]
        }
      >
        <div
          id="compliance"
        >
          <br />
          <div
            className="pui-page-box compliance-form"
          >
            <h1
              className="pui-h1"
            >
              Manual Trade Approvals
            </h1>
            <p>
              Allows you to pre-approve token trades between two wallet addresses for a period of time. You can always edit and remove trade approvals. Note that these approvals supercede all other exemptions and restrictions for a particular wallet.
            </p>
            <div
              className="whitelist-settings"
            >
              <div
                className="bx--form-item"
              >
                <label
                  className="bx--label"
                  htmlFor="approvalToggle"
                >
                  Enable Manual Trade Approvals
                </label>
                <Toggle
                  defaultToggled={false}
                  id="approvalToggle"
                  labelA="Off"
                  labelB="On"
                  onToggle={[Function]}
                  toggled={true}
                />
              </div>
              <div
                className="bx--form-item"
                style={Object {}}
              >
                <Connect(ApprovalTable) />
              </div>
            </div>
            <div
              className="pui-clearfix"
            />
          </div>
        </div>
      </GridCol>
    </GridRow>
  </Grid>
</Page>
`;

exports[`Compliance Page should render NotFoundPage when there is no token 1`] = `<NotFoundPage />`;

exports[`Compliance Page should render correctly when token address is present 1`] = `
<Page
  py="xl"
  title="Compliance – Polymath"
>
  <Connect(Progress) />
  <Grid
    gridGap={4}
  >
    <GridRow
      gridGap="0px"
    >
      <GridCol
        gridSpan={9}
      >
        <h1
          className="pui-h1"
        >
          Token Compliance
        </h1>
        <h3
          className="pui-h3"
        >
          Manage compliance requirements of your tokens. You can import and export your whitelist, manage ownership percentages, add 3rd party whitelist managers, and manage approval of token transfers between wallets.
        </h3>
      </GridCol>
      <GridCol
        style={
          Object {
            "alignSelf": "center",
          }
        }
      >
        <Button
          className="import-whitelist-btn"
          disabled={false}
          icon="upload"
          iconDescription="Provide icon description if icon is used"
          kind="primary"
          onClick={[Function]}
          small={false}
          tabIndex={0}
          type="button"
        >
          Import Whitelist
        </Button>
      </GridCol>
      <GridCol
        style={
          Object {
            "alignSelf": "center",
          }
        }
      >
        <Connect(ImportWhitelistModal)
          isOpen={false}
          onClose={[Function]}
          onSubmit={[Function]}
        />
        <Button
          className="import-whitelist-btn"
          disabled={false}
          icon="download"
          iconDescription="Provide icon description if icon is used"
          kind="secondary"
          onClick={[Function]}
          small={false}
          tabIndex={0}
          type="button"
        >
          Export Whitelist
        </Button>
      </GridCol>
      <GridCol
        style={
          Object {
            "alignSelf": "center",
            "justifySelf": "left",
          }
        }
      >
        <OverflowMenu
          ariaLabel="list of options"
          direction="bottom"
          flipped={true}
          floatingMenu={true}
          iconDescription="open and close list of options"
          menuOffset={[Function]}
          menuOffsetFlip={[Function]}
          onClick={[Function]}
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          open={false}
          style={
            Object {
              "float": "right",
            }
          }
          tabIndex={0}
        >
          <OverflowMenuItem
            disabled={false}
            hasDivider={false}
            isDelete={false}
            itemText="Pause All Transfers"
            onClick={[Function]}
          />
        </OverflowMenu>
      </GridCol>
    </GridRow>
    <GridRow
      gridGap={4}
    >
      <GridCol
        gridSpan={
          Array [
            12,
            12,
            6,
            6,
          ]
        }
      >
        <div
          id="compliance"
        >
          <br />
          <div
            className="pui-page-box compliance-form"
          >
            <h1
              className="pui-h1"
            >
              Ownership Restrictions
            </h1>
            <div
              className="compliance-settings"
            >
              <div
                className="bx--form-item"
              >
                <label
                  className="bx--label"
                  htmlFor="percentageToggle"
                >
                  Enable Ownership Restrictions
                </label>
                <Toggle
                  defaultToggled={false}
                  id="percentageToggle"
                  labelA="Off"
                  labelB="On"
                  onToggle={[Function]}
                  toggled={false}
                />
              </div>
              <div
                className="bx--form-item"
                style={Object {}}
              >
                <label
                  className="bx--label"
                  htmlFor="percentage"
                >
                  Each Individual Investor Can
                  <br />
                  Own Up To of Outstanding Tokens
                </label>
                <div>
                  <TextInput
                    className="bx--text__input"
                    disabled={false}
                    helperText=""
                    id="percentage"
                    invalid={false}
                    invalidText=""
                    labelText=""
                    light={false}
                    onChange={[Function]}
                    onClick={[Function]}
                    placeholder="–"
                    type="text"
                  />
                  <Button
                    className="apply-percentage-btn"
                    disabled={true}
                    iconDescription="Provide icon description if icon is used"
                    kind="primary"
                    onClick={[Function]}
                    small={false}
                    tabIndex={0}
                    type="button"
                  >
                    Apply
                  </Button>
                </div>
              </div>
            </div>
            <div
              className="pui-clearfix"
            />
          </div>
        </div>
      </GridCol>
      <GridCol
        gridSpan={
          Array [
            12,
            12,
            6,
            6,
          ]
        }
      >
        <div
          id="compliance"
        >
          <br />
          <div
            className="pui-page-box compliance-form"
          >
            <h1
              className="pui-h1"
            >
              Whitelist Management
            </h1>
            <div
              className="whitelist-settings"
            >
              <div
                className="bx--form-item"
              >
                <label
                  className="bx--label"
                  htmlFor="whitelistToggle"
                >
                  Enable Third-Party Whitelist Management
                </label>
                <Toggle
                  defaultToggled={false}
                  id="whitelistToggle"
                  labelA="Off"
                  labelB="On"
                  onToggle={[Function]}
                />
              </div>
              <div
                className="bx--form-item"
                style={
                  Object {
                    "display": "none",
                  }
                }
              >
                <Connect(WhitelistTable) />
              </div>
            </div>
            <div
              className="pui-clearfix"
            />
          </div>
        </div>
      </GridCol>
    </GridRow>
    <GridRow
      gridGap={4}
    >
      <GridCol
        gridSpan={
          Array [
            12,
            12,
            12,
            12,
          ]
        }
      >
        <div
          id="compliance"
        >
          <br />
          <div
            className="pui-page-box compliance-form"
          >
            <h1
              className="pui-h1"
            >
              Manual Trade Approvals
            </h1>
            <p>
              Allows you to pre-approve token trades between two wallet addresses for a period of time. You can always edit and remove trade approvals. Note that these approvals supercede all other exemptions and restrictions for a particular wallet.
            </p>
            <div
              className="whitelist-settings"
            >
              <div
                className="bx--form-item"
              >
                <label
                  className="bx--label"
                  htmlFor="approvalToggle"
                >
                  Enable Manual Trade Approvals
                </label>
                <Toggle
                  defaultToggled={false}
                  id="approvalToggle"
                  labelA="Off"
                  labelB="On"
                  onToggle={[Function]}
                />
              </div>
              <div
                className="bx--form-item"
                style={
                  Object {
                    "display": "none",
                  }
                }
              >
                <Connect(ApprovalTable) />
              </div>
            </div>
            <div
              className="pui-clearfix"
            />
          </div>
        </div>
      </GridCol>
    </GridRow>
  </Grid>
</Page>
`;
